# Cytopia-Android

./: .gitignore  build.gradle  get_dependencies.bat  get_dependencies.cmake  get_dependencies.sh
Cytopia/: CMakeLists.txt  build.gradle
SDL2/: CMakeLists.txt  build.gradle
libnoise/: CMakeLists.txt  build.gradle
libogg/: build.gradle
libpng/: CMakeLists.txt  build.gradle
libvorbis/: build.gradle
openal-soft/: build.gradle
zlib/: CMakeLists.txt  build.gradle
